--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "url": "https://nicolasbrugneaux/isaac.js"
   },
   "devDependencies": {
-    "babelify": "^6.1.3",
+    "babelify": "^6.3.0",
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
     "gulp-util": "^3.0.6",
     "gulp-webserver": "^0.9.1",
-    "object-assign": "^3.0.0",
+    "object-assign": "^4.0.1",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.3.1"
+    "watchify": "^3.4.0"
   },
   "keywords": [
     "isaac",
@@ -28,7 +28,5 @@
   ],
   "author": "Nicolas Brugneaux <nicolas.brugneaux@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "babel-runtime": "^5.8.19"
-  }
+  "dependencies": {}
 }
